--- a/index/css/style.css
+++ b/index/css/style.css
@@ -179,18 +179,20 @@ header {
     flex-wrap: wrap;
 }
 
+.card {
+    border: 1px solid #000;
+}
+
 .card1 {
     margin-top: -100px;
-    border: 1px solid #000;
 }
 
 .card2 {
     margin-top: -200px;
-    border: 1px solid #000;
 }
 
 .card4 {
-    margin-top: -200px;
+    margin-top: -155px;
 }
 
 .card5 {
