--- a/about/css/about.css
+++ b/about/css/about.css
@@ -1,186 +1,100 @@
-* {
-    -webkit-box-sizing: border-box;
+*{
     box-sizing: border-box;
 }
 
-body {
-    margin: auto;
-    padding: auto;
-    width: 100%;
+body{
+    margin: 0;
+    padding: 0;
     font-family: 'Roboto', sans-serif;
 }
 
-.container, .menu, .footer{
-    width: 100%;
-    padding-left: 230px;
-    padding-right: 230px;
+.container{
+    padding: 0 150px;
 }
-
-.menu {
-    width: 100%;
-    height: 100px;
-    box-shadow: 1px 2px 5px 1px rgba(0, 0, 0, 0.15);
-    color: #fff;
+/* style for header*/
+.header-flex{
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
+    height: 80px;
 }
 
-#logo-link {
-    border: none;
+header{
+    background-color: #fff;
+    height: 80px;
+    box-shadow: 1px 2px 5px 1px rgba(0, 0, 0, 0.15);
 }
 
-.menu a {
+.navbar a{
     text-decoration: none;
-    font-family: 'Roboto', sans-serif;
+    color: #777777;
+    font-family: Roboto;
     font-size: 14px;
     font-weight: 700;
     line-height: 24px;
-    text-transform: uppercase;
-    color: #777777;
-    margin-right: 40px;
+    margin-right: 35px;
 }
 
-#menu-button {
-    width: 30px;
-    height: 30px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: none;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    position: relative;
-    background-color: #222;
-    border-radius: 50%;
-    cursor: pointer;
-    border: none;
-  }
-  
-  #menu-button #nav-span {
-    width: 15px;
-    height: 2px;
+.navbar a:hover{
+    color: #000;
+    border-bottom: 3px solid #000;
+}
+
+
+/* style for footer*/
+.footer{
+    height: 300px;
+    width: 100%;
+    margin-top: 70px;
     background-color: #fff;
-    display: inline-block;
-    position: relative;
-    -webkit-transition: background-color 0.25s;
-    transition: background-color 0.25s;
-  }
-  
-  #menu-button #nav-span::after, #menu-button #nav-span::before {
-    content: "";
-    display: block;
-    position: absolute;
-    height: 2px;
-    width: 15px;
-    background-color: #fff;
-    -webkit-transition: top 0.25s, -webkit-transform 0.35s;
-    transition: top 0.25s, -webkit-transform 0.35s;
-    transition: top 0.25s, transform 0.35s;
-    transition: top 0.25s, transform 0.35s, -webkit-transform 0.35s;
-  }
-  
-  #menu-button #nav-span::after {
-    top: 5px;
-    left: 0;
-  }
-  
-  #menu-button #nav-span::before {
-    top: -5px;
-    left: 0;
-  }
-  
-  #menu-button.active #nav-span {
-    background-color: transparent;
-  }
-  
-  #menu-button.active #nav-span::after {
-    top: 0px;
-    -webkit-transform: rotateZ(45deg);
-            transform: rotateZ(45deg);
-  }
-  
-  #menu-button.active #nav-span::before {
-    top: 0px;
-    -webkit-transform: rotateZ(-45deg);
-            transform: rotateZ(-45deg);
-  }
-
-.section{
-    background-color: #fefefe;
+    box-shadow: 0 -3px 5px 1px rgba(163, 163, 163, 0.1);
 }
 
-.about{
-    height: 735px;
-}
-
-.work{
-    width: 50%;
-    border: 1px solid red;
-    float: right;
-    margin-top: -119px;
-}
-
-.title {
-    display: block;
-    text-align: center;
-}
-
-.title h1 {
+.footer-logo{
     display: flex;
     justify-content: center;
-    width: 590px;
-    height: 56px;
-    background-color: #000000;
-    color: #ffffff;
-    font-size: 48px;
-    font-weight: 300;
-    line-height: 56px;
-    text-transform: uppercase;
-    letter-spacing: 4.8px;
+    align-items: center;
+    height: 140px;
+}        
+
+.copyright{
+    height: 95px;
 }
 
-.title h3 {
-    display: block;
-    color: #000000;
-    position: absolute;
-    font-size: 18px;
-    font-weight: 300;
+.social{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 65px;
+    border-top: 1px solid #ebebeb;
+    border-bottom: 1px solid #ebebeb;
+}
+
+.social-links a{
+    text-decoration: none;
+    color: #777777;
+    font-size: 20px;
+    margin-right: 40px;
+    font-weight: 400;
     line-height: 24px;
+    letter-spacing: 0.7px;
+}
+
+.copyright{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.copyright-text{
+    color: #9c9c9c;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 26px;
     text-transform: uppercase;
-    letter-spacing: 7.2px;
+    letter-spacing: 0.33px;
 }
 
-.story{
-    /*margin-top: 72px;*/   
-    display: inline;
-}
-
-.story_title{
+.small_copyright-text{
     color: #000000;
-    font-size: 18px;
-    font-weight: 300;
-    line-height: 24px;
-    text-transform: uppercase;
-    letter-spacing: 7.2px;
-}
-
-
-
-
-@media (min-width: 1024px) and (max-width: 1199px){
-    .navbar{
-        margin-right: -100px;
-    }
-
-    .hero-button{
-        margin-left: 215px;
-    }
 }
