--- a/index/css/style.css
+++ b/index/css/style.css
@@ -40,9 +40,66 @@ header{
     border-bottom: 3px solid #000;
 }
 
+#menu-btn{
+    display: block;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: #000;
+    position: relative;
+    border: none;
+    }
+    
+   #line,
+    #line::before,
+   #line::after{ 
+    width: 15px;
+    height: 2px;
+    top: 50%;
+    left: 50%;
+    margin-top: -1px;
+    margin-left: -8px;
+    background-color: #fff;
+    position: absolute ;
+    }
+    
+   #line::before,
+   #line::after{
+    content: '';
+    }
+    
+   #line::before{
+    transform: translateY(-5px);
+    }
+    
+   #line::after{
+    transform: translateY(5px);
+}
+
+
+.menu-btn_active #line{
+    height: 0;
+    transition: 0.3s;
+}
+
+.menu-btn_active #line::before{
+    transform: rotate(45deg);
+    transition: 0.3s;
+}
+
+.menu-btn_active #line::after{
+    transform: rotate(-45deg);
+    transition: 0.3s;
+}
+
+.menu-down li{
+    list-style-type: none;
+}
+
 .hero-bg{
     width: 100%;
     background: url(../index_img/hero_bg.jpg) no-repeat top center/cover;
+    background-size: 100%;
 }
 
 .hero{
@@ -241,8 +298,23 @@ header{
 }
 
 @media(max-width:500px){
+    #menu-btn{
+        display: block;
+        float: right; 
+        margin-top: -35px;
+    }
+
+    .logo-hide{
+        display: block;
+        margin-bottom: -100px;
+    }
+
+    .navbar{
+        display: none;
+    }
+
     .row{
-        padding: 0;
+        margin: 0;
     }
 
     .container{
@@ -258,10 +330,15 @@ header{
         font-size: 12px;
     }
 
+    .hero-bg{
+        height: 200px;
+    }
+
     .hero h1{
-        font-size: 25px;
         font-weight: 400;
-        letter-spacing: 3px;
+        margin-top: -150px;
+        font-size: 18px;
+        letter-spacing: 6px;
     }
 
     .hero h3{
